k8s/prod/client-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: client-cluster-ip-service
  namespace: default
spec:
  type: ClusterIP
  selector:
    component: web
  ports:
  - port: 7070
    targetPort: 7070
  - port: 7071
    targetPort: 7071
