k8s/prod/internal-loadbalancer-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: internal-loadbalancer-service
  annotations:
    networking.gke.io/load-balancer-type: "Internal"
spec:
  type: LoadBalancer
  externalTrafficPolicy: Cluster
  selector:
    component: server-loadbalancer
  ports:
  - name: tcp-port
    protocol: TCP
    port: 8080
    targetPort: 7775 # Push Notifications Service
