k8s/prod/redis-ephemeral-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis-ephemeral-cluster-ip-service
  namespace: default
spec:
  selector:
    component: redis-ephemeral
  ports:
  - port: 6380
    targetPort: 6379
